# local-agentic-llm

./: .gitignore  LICENSE  README.md  TICKETS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  budget.py  config.py  graph.py  router.py
agent/rag/: __init__.py  chunk.py  retrieve.py  store.py
agent/tests/: test_budget.py  test_chunk.py  test_tools.py
agent/tools/: __init__.py  base.py  calculator.py  file_search.py
docs/decisions/: 0000-why-local.md  0001-resident-engine.md
docs/plan/: local-agentic-llm-plan.md
eval/: __init__.py  e2e_task.py  smoke_toolcalling.py
infra/ollama/: README.md  set-wired-limit.sh
