[project]
name = "local-agentic-llm"
version = "0.1.0"
description = "Local on-device agentic LLM system (Mac M3 / 48 GB) — LangGraph against a local OpenAI-compatible endpoint."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["eval", "agent"]
